// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helper utilities spec tests getAlertsVisualizationSpec function  - snapshot test: should match alerts spec 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "config": {
    "legend": {
      "labelColor": "#343741",
      "labelFont": ""Inter UI", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"",
      "labelFontSize": 14,
      "rowPadding": 6,
      "titleColor": "#1a1c21",
      "titleFontSize": 14,
      "titleFontWeight": 600,
      "titleLineHeight": 21,
      "titlePadding": 10,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [],
  },
  "description": "Alerts data overview",
  "layer": [
    {
      "encoding": {
        "color": {
          "field": "",
          "scale": {
            "domain": [
              "5 (Lowest)",
              "4 (Low)",
              "3 (Medium)",
              "2 (High)",
              "1 (Highest)",
            ],
            "range": [
              "#209280",
              "#54b399",
              "#d6bf57",
              "#e7664c",
              "#cc5642",
            ],
          },
          "title": "Alert severity",
        },
        "opacity": {
          "condition": {
            "selection": "series",
            "value": 1,
          },
          "value": 0.2,
        },
        "tooltip": [
          {
            "aggregate": "sum",
            "axis": {
              "grid": true,
            },
            "field": "alert",
            "title": "Alerts",
            "type": "quantitative",
          },
          {
            "field": "time",
            "format": "%Y-%m-%d %H:%M:%S",
            "timeUnit": {
              "step": 1,
              "unit": "yearmonthdatehoursminutes",
            },
            "title": "Time",
            "type": "temporal",
          },
          {
            "field": "",
            "title": "Alert severity",
          },
        ],
        "x": {
          "axis": {
            "format": "%Y-%m-%d %H:%M",
            "grid": false,
          },
          "field": "time",
          "scale": {
            "domain": undefined,
          },
          "timeUnit": {
            "step": 1,
            "unit": "yearmonthdatehoursminutes",
          },
          "title": "",
          "type": "temporal",
        },
        "y": {
          "aggregate": "sum",
          "axis": {
            "grid": true,
          },
          "field": "alert",
          "title": "Count",
          "type": "quantitative",
        },
      },
      "mark": {
        "clip": true,
        "type": "bar",
      },
      "selection": {
        "series": {
          "bind": "legend",
          "encodings": [
            "color",
          ],
          "on": "click",
          "type": "multi",
        },
      },
    },
  ],
}
`;

exports[`helper utilities spec tests getFindingsVisualizationSpec function  - snapshot test: should match findings spec 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "config": {
    "legend": {
      "labelColor": "#343741",
      "labelFont": ""Inter UI", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"",
      "labelFontSize": 14,
      "rowPadding": 6,
      "titleColor": "#1a1c21",
      "titleFontSize": 14,
      "titleFontWeight": 600,
      "titleLineHeight": 21,
      "titlePadding": 10,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [],
  },
  "description": "Findings data overview",
  "layer": [
    {
      "encoding": {
        "color": {
          "field": "",
          "scale": {
            "domain": [
              "info",
              "low",
              "medium",
              "high",
              "critical",
            ],
            "range": [
              "#209280",
              "#54b399",
              "#d6bf57",
              "#e7664c",
              "#cc5642",
            ],
          },
          "title": "Rule severity",
        },
        "opacity": {
          "condition": {
            "selection": "series",
            "value": 1,
          },
          "value": 0.2,
        },
        "tooltip": [
          {
            "aggregate": "sum",
            "axis": {
              "grid": true,
            },
            "field": "finding",
            "title": "Findings",
            "type": "quantitative",
          },
          {
            "field": "time",
            "format": "%Y-%m-%d %H:%M:%S",
            "timeUnit": {
              "step": 1,
              "unit": "yearmonthdatehoursminutes",
            },
            "title": "Time",
            "type": "temporal",
          },
          {
            "field": "",
            "title": "Rule severity",
          },
        ],
        "x": {
          "axis": {
            "format": "%Y-%m-%d %H:%M",
            "grid": false,
          },
          "field": "time",
          "scale": {
            "domain": undefined,
          },
          "timeUnit": {
            "step": 1,
            "unit": "yearmonthdatehoursminutes",
          },
          "title": "",
          "type": "temporal",
        },
        "y": {
          "aggregate": "sum",
          "axis": {
            "grid": true,
          },
          "field": "finding",
          "title": "Count",
          "type": "quantitative",
        },
      },
      "mark": {
        "clip": true,
        "type": "bar",
      },
      "selection": {
        "series": {
          "bind": "legend",
          "encodings": [
            "color",
          ],
          "on": "click",
          "type": "multi",
        },
      },
    },
  ],
}
`;

exports[`helper utilities spec tests getOverviewVisualizationSpec function  - snapshot test: should match overview spec 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "config": {
    "legend": {
      "labelColor": "#343741",
      "labelFont": ""Inter UI", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"",
      "labelFontSize": 14,
      "rowPadding": 6,
      "titleColor": "#1a1c21",
      "titleFontSize": 14,
      "titleFontWeight": 600,
      "titleLineHeight": 21,
      "titlePadding": 10,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [],
  },
  "description": "Plot showing average data with raw values in the background.",
  "layer": [
    {
      "encoding": {
        "color": {
          "field": "fieldType",
          "legend": {
            "values": [
              "Active alerts",
              "Findings",
            ],
          },
          "scale": {
            "domain": [
              "Active alerts",
              "Findings",
            ],
            "range": [
              "#BD271E",
              "#6092C0",
            ],
          },
          "title": "",
        },
        "tooltip": [
          {
            "aggregate": "sum",
            "axis": {
              "grid": true,
            },
            "field": "finding",
            "title": "Findings",
            "type": "quantitative",
          },
          {
            "field": "time",
            "format": "%Y-%m-%d %H:%M:%S",
            "timeUnit": {
              "step": 1,
              "unit": "yearmonthdatehoursminutes",
            },
            "title": "Time",
            "type": "temporal",
          },
        ],
        "x": {
          "axis": {
            "format": "%Y-%m-%d %H:%M",
            "grid": false,
          },
          "field": "time",
          "scale": {
            "domain": undefined,
          },
          "timeUnit": {
            "step": 1,
            "unit": "yearmonthdatehoursminutes",
          },
          "title": "",
          "type": "temporal",
        },
        "y": {
          "aggregate": "sum",
          "axis": {
            "grid": true,
          },
          "field": "finding",
          "title": "Count",
          "type": "quantitative",
        },
      },
      "mark": {
        "clip": true,
        "type": "bar",
      },
      "transform": [
        {
          "as": "fieldType",
          "calculate": "datum.alert == 1 ? 'Active alerts' : 'Findings'",
        },
      ],
    },
    {
      "encoding": {
        "tooltip": [
          {
            "aggregate": "sum",
            "axis": {
              "grid": true,
            },
            "field": "alert",
            "title": "Alerts",
            "type": "quantitative",
          },
          {
            "field": "time",
            "format": "%Y-%m-%d %H:%M:%S",
            "timeUnit": {
              "step": 1,
              "unit": "yearmonthdatehoursminutes",
            },
            "title": "Time",
            "type": "temporal",
          },
        ],
        "x": {
          "axis": {
            "format": "%Y-%m-%d %H:%M",
            "grid": false,
          },
          "band": 0.5,
          "field": "time",
          "scale": {
            "domain": undefined,
          },
          "timeUnit": {
            "step": 1,
            "unit": "yearmonthdatehoursminutes",
          },
          "title": "",
          "type": "temporal",
        },
        "y": {
          "aggregate": "sum",
          "axis": {
            "grid": true,
          },
          "field": "alert",
          "title": "Count",
          "type": "quantitative",
        },
      },
      "mark": {
        "clip": true,
        "color": "#BD271E",
        "interpolate": "monotone",
        "point": {
          "color": "#BD271E",
          "fill": "white",
          "filled": false,
          "size": 50,
        },
        "type": "line",
      },
    },
  ],
}
`;

exports[`helper utilities spec tests getVisualizationSpec function  - snapshot test: should match visualization spec 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "config": {
    "legend": {
      "labelColor": "#343741",
      "labelFont": ""Inter UI", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"",
      "labelFontSize": 14,
      "rowPadding": 6,
      "titleColor": "#1a1c21",
      "titleFontSize": 14,
      "titleFontWeight": 600,
      "titleLineHeight": 21,
      "titlePadding": 10,
    },
    "view": {
      "stroke": "transparent",
    },
  },
  "data": {
    "values": [
      {
        "xField": 1,
        "yField": 1,
      },
    ],
  },
  "description": "Visualization",
  "layer": [
    {
      "encoding": {
        "opacity": {
          "condition": {
            "selection": "series",
            "value": 1,
          },
          "value": 0.2,
        },
      },
      "selection": {
        "series": {
          "bind": "legend",
          "encodings": [
            "color",
          ],
          "on": "click",
          "type": "multi",
        },
      },
      "x": {
        "field": "xField",
      },
      "y": {
        "field": "yField",
      },
    },
  ],
}
`;
